<resources>
    <string name="app_name">EN!GMA</string>
    <string name="navigation_home">主页</string>
    <string name="navigation_dashboard">流水</string>
    <string name="navigation_title_home">智威校园EX·主页</string>
    <string name="navigation_title_dashboard">智威校园EX·仪表板</string>
    <string name="navigation_title_notifications">智威校园EX·通知</string>
    <string name="title_home">概览</string>
    <string name="title_dashboard">记录</string>
    <string name="title_mine">我的</string>
    <string name="records_title">消费与刷脸</string>
    <string name="recent_consumption">最近消费</string>
    <string name="view_all">查看全部</string>
    <string name="today_consume">今日消费</string>
    <string name="today_count">今日笔数</string>
    <string name="error_hint">出错了，正在等待自动刷新。若刚完成初始化，请稍候片刻。</string>
    <string name="empty_records">暂无记录</string>
    <string name="flow_tab">消费流水</string>
    <string name="face_tab">刷脸记录</string>
    <string name="card_number_label">卡号</string>
    <string name="balance_label">余额</string>
    <string name="consume_count_label">累计笔数</string>
    <string name="mine_settings">设置</string>
    <string name="mine_about">关于</string>
    <string name="disclaimer">本软件是对智威校园小程序的学习模仿，仅供学习交流使用。</string>
    <string name="detail_device">设备</string>
    <string name="detail_place">地点</string>
    <string name="detail_time">时间</string>
    <string name="detail_balance">交易后余额</string>
    <string name="detail_merchant">商户</string>
    <string name="detail_serial">流水号</string>
    <string name="detail_wallet">钱包</string>
    <string name="now_loading">Now Loading...</string>
    <string name="ShaoNvQiDaoZhong">少女祈祷中</string>
    <string name="title_activity_settings">设置</string>
    <string name="common_setting_header">常规</string>
    <string name="clear_preferences">清除软件数据</string>
    <string name="clear_preferences_summary">清除软件数据, 包括登录信息、缓存等</string>
    <string name="sync_header">Sync</string>
    <string name="dashboard_update_limit">仪表板条目限制(天)</string>
    <string name="update_rate">数据更新比率(毫秒)</string>
    <string name="ComingSoon_header">即将到来</string>
    <string name="license_content">一. 本开源项目仅供个人学习交流使用, 方便 Android 端可以便捷的查看校园一卡通的日常使用情况.\n二. 本项目完全免费, 可能存在较多漏洞, 维护者仅保证自己能正常使用, 存在问题请通过项目页 Issues 反馈.\n三. 本项目中所有适配的接口均来自智威智能 (广州智威智能科技有限公司) 旗下智威校园 (ivxiaoyuan), 本项目不对其控制的安全性负责.\n四. 本项目会将个人资料、账户密钥等信息, 缓存在安装设备本地, 不含任何上传个人信息的接口.\n五. 真诚希望智威官方能够推出 `智威校园 For Android`, 使广大用户能用上.\n六. 本项目仅供个人学习交流使用, 切勿进行传播、任何形式的盈利, 未涉及的问题请参见国家有关法律法规, 以国家法律法规为准.\n\n项目仓库地址:\nhttps://github.com/ju1c3rSH/enigma</string>
    <string name="help_us_better">允许我们分析应用崩溃数据</string>
    <string name="attachment_title">余额变动通知</string>
    <string name="auto_sync_summary_on">关闭将无法接收一卡通消费通知</string>
    <string name="auto_sync_summary_off">启用以接收一卡通消费通知</string>
    <string name="face_scan_history">刷脸记录</string>
    <string name="oobe_title">初始设置</string>
    <string name="oobe_step_of">第 %1$d 步，共 3 步 · </string>
    <string name="oobe_step_school">选择学校</string>
    <string name="oobe_step_class">选择年级班级</string>
    <string name="oobe_step_personal">个人信息</string>
    <string name="oobe_school_hint">学校名称</string>
    <string name="oobe_search_hint">输入关键字搜索学校</string>
    <string name="oobe_clear">清空</string>
    <string name="oobe_no_result">未找到相关学校，换个关键字试试</string>
    <string name="oobe_change_school">更换学校</string>
    <string name="oobe_grade">年级</string>
    <string name="oobe_class">班级</string>
    <string name="oobe_pick_first">请先选择上一项</string>
    <string name="oobe_next">下一步</string>
    <string name="oobe_prev">上一步</string>
    <string name="oobe_name_label">姓名</string>
    <string name="oobe_name_helper">需与学生在校登记姓名一致</string>
    <string name="oobe_card_label">卡号</string>
    <string name="oobe_card_helper">卡板背面的一串数字或字母</string>
    <string name="oobe_submit">完成配置</string>
    <string name="restart_app_title">重启软件</string>
    <string name="restart_app_summary">重启以应用新配置</string>
    <string name="app_details_title">软件细节</string>
    <string name="app_details_summary">软件使用到的权限</string>
    <string name="clear_confirm_text">你确定要清除所有的软件数据及缓存?</string>
    <string name="cleared_toast">数据已清除</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="presets_label">快捷值</string>
    <string name="days_unit">天</string>
    <string name="update_rate_hint">毫秒（1秒=1000毫秒）</string>
    <string name="dashboard_update_limit_hint">天数，过大可能导致卡顿</string>
    <string name="about_license_title">许可与说明</string>
    <string name="about_contributors">贡献者</string>
    <string name="about_contributor_prefix">贡献者 : </string>
    <string name="danger_section_header">数据与维护</string>
</resources>