<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/common_setting_header">

        <EditTextPreference
            app:key="updateRate"
            app:title="@string/update_rate"
            app:defaultValue="60000"
            app:dialogMessage="推荐值：60000 \n过小将导致手机卡顿和占满网速\n过大会导致数据更新不及时\n1秒=1000毫秒"
            android:summary="@string/clear_preferences_summary"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="dashboard_update_limit"
            app:title="@string/dashboard_update_limit"
            app:useSimpleSummaryProvider="true"
            app:dialogMessage="推荐值：50 \n过大可能导致手机卡顿"
            android:defaultValue="过大可能导致手机卡顿"
            app:defaultValue="50"/>
        <Preference
            android:key="clear_preferences"
            app:title="@string/clear_preferences"
            android:summary="@string/clear_preferences_summary" />
        <Preference
            android:key="restart_app"
            app:title="重启软件"
            android:summary="重启以应用新配置" />
        <Preference
            android:key="app_details"
            app:title="软件细节"
            android:summary="软件使用到的权限" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ComingSoon_header">

        <SwitchPreferenceCompat
            app:enabled="false"
            app:key="help_us_better"
            app:title="@string/help_us_better" />

        <SwitchPreferenceCompat
            app:enabled="false"
            app:key="auto_sync"
            app:summaryOff="@string/auto_sync_summary_off"
            app:summaryOn="@string/auto_sync_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>